[#140641593] Fix wishlist heart alignment

--- a/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
+++ b/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
@@ -64,7 +64,6 @@
       visibility: visible;
       position: absolute;
       top: auto;
-      right: 10px;
       margin-top: -40px;
     }
   }
